# multivariate_quadratic_estimator

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
docker/: Dockerfile
docs/source/: conf.py  degree_of_regularities.rst  degree_of_regularity.rst  hilbert_series.rst  index.rst  mq_estimator.rst  references.rst  utils.rst  witness_degree.rst
docs/source/algorithms/: bjorklund.rst  boolean_solve_fxl.rst  cgmta.rst  crossbred.rst  dinur1.rst  dinur2.rst  exhaustive_search.rst  f5.rst  hybrid_f5.rst  kpg.rst  lokshtanov.rst  mht.rst
docs/source/complexities/: F5.rst
docs/source/schemes/: gemss.rst  rainbow.rst  random.rst  uov.rst
docs/source/series/: hilbert.rst  nmonomial.rst
scripts/: direct_attack_complexities.sage  table1.sage
src/mpkc/: __init__.py  degree_of_regularities.py  degree_of_regularity.py  hilbert_series.py  mq_estimator.py  nmonomial_series.py  table1.py  utils.py  witness_degree.py
src/mpkc/algorithms/: __init__.py  base.py  bjorklund.py  boolean_solve_fxl.py  cgmta.py  crossbred.py  dinur1.py  dinur2.py  exhaustive_search.py  f5.py  hybrid_approach.py  hybrid_f5.py  kpg.py  lokshtanov.py  mht.py
src/mpkc/algorithms/F5/: __init__.py
src/mpkc/algorithms/dinur2/: complexity.py
src/mpkc/algorithms/kpg/: __init__.py  complexity.py
src/mpkc/algorithms/mht/: complexity.py
src/mpkc/complexities/: F5.py  hybrid_approach.py
src/mpkc/estimators/: mq.py
src/mpkc/schemes/: __init__.py  gemss.py  rainbow.py  random.py  uov.py
src/mpkc/series/: hilbert.py  nmonomial.py
src/mq_estimator/: degree_of_regularity.py
(+8 files in other folders)
