[metadata]
name = mq_estimator
version = 0.0.1
author = Rusydi H. Makarim and Javier Verbel
author_email = rusydi.makarim@tii.ae, javier.verbel@tii.ae
description = Multivariate Quadratic (MQ) Complexity Estimator
long_description = file: README.md
long_description_content_type = text/markdown
url =
classifiers =

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
